[package]
name = "failure-tools"
version = "4.0.5"
edition = "2018"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Various tools to be used in conjunction with the 'failure' crate."
license = "MIT"
repository = "https://github.com/Byron/failure-tools"
include = ["src/lib.rs", "LICENSE.md", "README.md"]

[lib]
doctest = false

[dependencies.failure]
version = "0.1.6"
